...

    return CustomScaffold(
      paddingHorizontal: screenWidth * 0.07,
      scrollable: enableAppiumSemantics,
      widgets: [
        SizedBox(height: screenHeight * 0.07),
        MovieListView(title: "Trending", movies: MockMovies.trendingMovies),
        SizedBox(height: screenHeight * 0.02),
        MovieListView(title: "New", movies: MockMovies.newMovies),
      ],
    );
  }
}

class MovieListView extends StatelessWidget {
...
