...

    return CustomScaffold(
      alignment: CrossAxisAlignment.start,
      doUnFocus: true,
      widgets: [
        const Spacer(),
        const PrimaryText(text: "Login"),
        SizedBox(height: screenHeight * 0.05),
        CustomTextField(
          fieldKey: loginEmailFieldKey,
          controller: _loginController,
          labelText: "Email",
          semanticsLabel: "Email field",
...
