...
    return AlertDialog(
      shape: const RoundedRectangleBorder(
        borderRadius: BorderRadius.all(Radius.circular(6.0)),
      ),
      insetPadding: EdgeInsets.symmetric(horizontal: screenWidth * 0.15),
      title: const Text(
        'Premium Account',
        style: TextStyle(
          fontSize: 22.0,
          color: ColorPalette.blackDialogText,
          fontWeight: FontWeight.w500,
        ),
      ),
...
        ),
        appiumSemantics(
          label: 'Premium dialog purchase',
          button: true,
          child: TextButton(
            child: const Text(
              'PURCHASE',
              style: TextStyle(
                fontSize: 18.0,
                color: ColorPalette.buttonBlue,
                fontWeight: FontWeight.w700,
              ),
            ),
...
